--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>somthingd</title>
+    <title>CodeCraft Studio</title>
     <link rel="shortcut icon" href="acctes/1-removebg-preview.png" type="image/x-icon">
     <link rel="stylesheet" href="Mainpage.css">
 </head>
